--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Patricia Dede Teye <triciadede024@gmail.com>
-Christian Ansre Orison <ansreorison@gmail.com>
+Christian Akpene Ansre Orison <ansreorison@gmail.com>
